fixed menus z-index

--- a/src/components/Catalog/CatalogCards/CatalogCards.module.scss
+++ b/src/components/Catalog/CatalogCards/CatalogCards.module.scss
@@ -56,7 +56,7 @@
   background-color: $background-color;
   width: 320px;
   max-height: 100vh;
-  z-index: 10;
+  z-index: 20;
   padding: 4px 0;
 
   @include onPhone {
