--- a/src/components/Header/Phone/PhoneHeader.module.scss
+++ b/src/components/Header/Phone/PhoneHeader.module.scss
@@ -42,7 +42,7 @@
   background-color: $background-color;
   width: 100%;
   max-height: 100vh;
-  z-index: 10;
+  z-index: 21;
 
   &__under {
     position: fixed;
